--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^0.7.0
+  firebase_auth: ^0.20.1
+  intl: ^0.16.0
+  cloud_firestore: ^0.16.0+1
+  file_picker: ^2.1.7
+  firebase_storage: ^7.0.0
 
 dev_dependencies:
   flutter_test:
